# streamlit-app

./: Procfile  README.md  app.py  ex1.py  pyproject.toml  requirements.txt
replit/: .replit
